--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,9 +14,13 @@
 
 <div class="sidebar">
   <ul class="sidebar-list">
-    <li class="sidebar-item"><a href="sign_in" class="sidebar-anchor">로그인</a></li>
-    <li class="sidebar-item"><a href="user" class="sidebar-anchor">내 정보</a></li>
-    <li class="sidebar-item"><a href="#" class="sidebar-anchor">로그아웃</a></li>
+    <% if(!currentUser) { %>
+    <li class="sidebar-item"><a href="user/sign_in" class="sidebar-anchor">로그인</a></li>
+    <% } %>
+    <% if(currentUser) { %>
+    <li class="sidebar-item"><a href="user/<%= currentUser.userID %>" class="sidebar-anchor">내 정보</a></li>
+    <li class="sidebar-item"><a href="user/sign_out" class="sidebar-anchor">로그아웃</a></li>
     <li class="sidebar-item"><a href="post/new" class="sidebar-anchor">글쓰기</a></li>
+    <% } %>
   </ul>
 </div>
