--- a/views/posts/post_new.ejs
+++ b/views/posts/post_new.ejs
@@ -31,7 +31,7 @@
     
             <div>
                 <label>written by <%= currentUser.userID %></label>
-                <input type="hidden" name="writtenBy" value = "<%= currentUser.userID %>">
+                <input type="hidden" name="author" value = "<%= currentUser.userID %>">
             </div>
     
             <div>
