--- a/views/posts/post_list.ejs
+++ b/views/posts/post_list.ejs
@@ -33,6 +33,20 @@
             </tbody>
         </table>
     </div>
+    <form action="/" method="get">
+        <div>
+            <label>search</label>
+            <div>
+                <select name="searchType">
+                    <option value="title" <%= searchType=='title'?'selected':'' %>>Title</option>
+                    <option value="body" <%= searchType=='body'?'selected':'' %>>Body</option>
+                    <option value="title,body" <%= searchType=='title,body'?'selected':'' %>>Title, Body</option>
+                </select>
+                <input minLength="1" type="text" name="searchText" value="<%= searchText %>">
+                <button type="submit">검색하기</button>
+            </div>
+        </div>
+    </form>
 </div>
 <nav data-pagination>
     <%
