--- a/views/posts/post_info.ejs
+++ b/views/posts/post_info.ejs
@@ -2,18 +2,18 @@
 
 <div class="post-page">
     <div class="post-list">
-        <h5>제목: <%= post.title %></h5>
+        <h3>제목: <%= post.title %></h3>
         <div>
             <div>
+                <div>사진:<br> 
+                    <% if(post.attachment) { %>
+                        <% for(let i = 0; i < post.attachment.length; i++) { %>
+                            <img src = "/uploads/<%= post.attachment[i].serverFileName %>" alt = "사진이 없습니다." width="100px" height="100px" />
+                    <% } } %>
+                </div>
                 <div>위치: <%= post.location %></div>
                 <div>본문: <%= post.body %></div>
                 <div>작성자: <%= post.author.userID %></div>
-                <div>사진: 
-                    <% if(post.attachment) { %>
-                        <% for(let i = 0; i < post.attachment.length; i++) { %>
-                            <img src = "/uploads/<%= post.attachment[i].serverFileName %>" alt = "사진이 없습니다." width="76px" height="76px" />
-                    <% } } %>
-                </div>
             </div>
     
             <div>
