--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,37 +1,40 @@
+/* Import Google Fonts */
 @import url(https://fonts.googleapis.com/css?family=Arimo:400,400italic,700,700italic);
-body,
-html {
+
+/* Reset default styles */
+body, html {
   height: 100%;
   padding: 0;
   margin: 0;
   font-family: 'Arimo', sans-serif;
+  background-color: #2D3142;
 }
 
+
+/* Main element styles */
 main {
-  z-index: 2;
   position: relative;
+  z-index: 2;
   height: 100%;
   background-color: #2D3142;
-  -webkit-transition: transform .7s ease-in-out;
-  -moz-transition: transform .7s ease-in-out;
-  -ms-transition: transform .7s ease-in-out;
-  -o-transition: transform .7s ease-in-out;
   transition: transform .7s ease-in-out;
 }
 
+/* User-agent logo styles */
 .ua {
-  z-index: 3;
-  
   position: absolute;
   top: 20px;
   left: 30px;
+  z-index: 3;
 }
 
+/* Home icon styles */
 .fa-house {
-  color:#EF8354;
   font-size: 2.4em;
+  color: #EF8354;
 }
 
+/* Navigation styles */
 @media (min-width: 480px) {
   .nav-list {
     display: block;
@@ -50,35 +53,29 @@ main {
   }
 }
 
-.post-page, .user-page {
-  width: auto;
-  padding: 10% 0 0;
+/* Post and user page styles */
+.post-page,
+.user-page {
   margin: auto;
+  padding: 10% 0 0;
+  width: auto;
 }
 
-.post-list {
-  position: relative;
-  z-index: 1;
+/* Post list and user box styles */
+.post-list,
+.user-box {
   background: #FFFFFF;
-  max-width: 900px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   margin: 0 auto 100px;
+  max-width: 900px;
   padding: 45px;
+  position: relative;
   text-align: center;
   text-overflow: ellipsis;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
-.user-box {
-  position: relative;
   z-index: 1;
-  background: #FFFFFF;
-  max-width: 900px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
+/* Number styles */
 .n1 {
   width: 100px;
 }
