--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/login.css">
 <link rel="stylesheet" href="css/nav.css">
 <link rel="stylesheet" href="css/master.css">
+<link rel="stylesheet" href="css/post.css">
 <script src = "js/master.js"></script>
 
 <title>
