--- a/public/css/post.css
+++ b/public/css/post.css
@@ -158,7 +158,7 @@
 }
 
 .file-upload-input {
-  /*display: none;*/
+  display: none;
 }
 
 .file-upload-button {
@@ -240,4 +240,45 @@
 
 .form-button:hover {
   background-color: #1976d2;
+}
+
+/* Style the modal container */
+.post-photo-modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(1.5px);
+}
+
+/* Style the close button */
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Style the modal image */
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 80%;
+  max-height: 80%;
 }
