imageio connection + dotenv implementation

--- a/views/posts/post_upload_image_test.ejs
+++ b/views/posts/post_upload_image_test.ejs
@@ -2,9 +2,10 @@
 
 <div class="post-page">
     <div class="form">
-        <img id="image" src="" alt="이미지를 업로드해주세요." width="76px" height="76px" />
-        <img id="image2" src="" alt="이미지를 업로드해주세요." width="76px" height="76px" />
-        <form action="/post/upload" method="post" enctype="multipart/form-data">
+        <div id = "imageContainer">
+
+        </div>
+        <form action="/post/upload" method="post" id="form" enctype="multipart/form-data">
             <div>
                 <label for="title">이미지 업로드 테스트</label>
                 <input type="file" id="file" name="image" multiple>
@@ -19,3 +20,23 @@
     </div>
 </div>
 <script src = "js/fileupload.js"></script>
+<!-- <script>
+    const form = document.getElementById("form")
+    const uploadedImgElem = document.getElementById("file")
+
+    form.addEventListener("submit", submitForm)
+
+    function submitForm(e) {
+        e.preventDefault()
+        const fileInput = document.getElementById("file")
+        const file = fileInput.files[0]
+        const formData = new FormData()
+        formData.append("image", file)
+        const response = fetch("http://localhost:3000/post/upload", {
+            method: "post",
+            body: formData,
+        })
+            .then(res => (uploadedImgElem.src = response.url))
+            .catch(err => ("Error occured", err))
+    }
+</script> -->
